# cloud-gateway

./: .gitignore  .travis.yml  README.md
src/: CMakeLists.txt
src/CMakeModules/: CMakeParseArguments.cmake  FindNL.cmake  FindPackageHandleStandardArgs.cmake  FindPackageMessage.cmake  FindPostgreSQL.cmake
src/cloudDB/: CMakeLists.txt  cgdb.c  cgdb_backend.c  cgdb_pg.c  cgdb_sql.c  cgdb_utils.c  cgdb_utils_internal.h
src/cloudFUSE/: CMakeLists.txt  cgfs.c  cgfs.h  cgfs_async.c  cgfs_async.c.orig  cgfs_async.h  cgfs_cache.c  cgfs_cache.h  cgfs_file_handler.c  cgfs_file_handler.h  cgfs_inode.c  cgfs_inode.h  cgfs_utils.c  cgfs_utils.h  cloudFUSE_low.c
src/cloudGatewayStorageManager/: CMakeLists.txt  cgStorageManager.c  cgStorageManagerCleaner.c  cgStorageManagerCleaner.h  cgStorageManagerCommon.h  cgStorageManagerHealer.c  cgStorageManagerHealer.h  cgStorageManagerMonitor.c  cgStorageManagerMonitor.h  cgStorageManagerServer.c  cgStorageManagerServer.h  cgStorageManagerStats.h  cgStorageManagerSyncer.c  cgStorageManagerSyncer.h
src/cloudStorageFilters/: CMakeLists.txt  cg_storage_filter_compression.c  cg_storage_filter_compression_parameters.itm  cg_storage_filter_encryption.c  cg_storage_filter_encryption_ciphers.itm  cg_storage_filter_encryption_parameters.itm
src/cloudStorageProviders/: CMakeLists.txt  cg_storage_provider_amazon.c  cg_storage_provider_amazon_parameters.itm  cg_storage_provider_openstack.c  cg_storage_provider_openstack_auth.c  cg_storage_provider_openstack_auth.h  cg_storage_provider_openstack_common.h  cg_storage_provider_openstack_parameters.itm  cg_storage_provider_posix.c  cg_storage_provider_posix_parameters.itm
src/cloudUtils/: CMakeLists.txt  CMakeLists.txt.orig  cloudutils.c  cloudutils_advanced_file_ops.c  cloudutils_aio.c  cloudutils_configuration.c  cloudutils_crypto.c  cloudutils_crypto_ciphers.itm  cloudutils_encoding.c  cloudutils_event.c  cloudutils_event_internal.h  cloudutils_file.c  cloudutils_htable.c  cloudutils_http.c  cloudutils_http.c.orig  cloudutils_json_reader.c  cloudutils_json_writer.c  cloudutils_llist.c  cloudutils_network.c  cloudutils_pool.c  cloudutils_process.c  cloudutils_rbtree.c  cloudutils_regex.c  cloudutils_shared_memory_segment.c  cloudutils_system.c  cloudutils_time_counter.c  cloudutils_vector.c  cloudutils_xml.c  cloudutils_xml_reader.c  cloudutils_xml_writer.c
src/libCloudGatewayMonitor/: CMakeLists.txt  cg_monitor_data.c
src/libCloudGatewayStorageManager/: CMakeLists.txt  cg_storage_cache.c  cg_storage_connection.c  cg_storage_filesystem.c  cg_storage_filesystem_db.c  cg_storage_filesystem_dir.c  cg_storage_filesystem_entry.c  cg_storage_filesystem_file.c  cg_storage_filesystem_instance.c  cg_storage_filesystem_monitor.c  cg_storage_filesystem_transfer_queue.c  cg_storage_filesystem_utils.c  cg_storage_filter.c  cg_storage_fs_cb_data.c  cg_storage_instance.c  cg_storage_io.c  cg_storage_listener.c  cg_storage_manager.c  cg_storage_manager_config_parameters.itm  cg_storage_manager_data.c  cg_storage_object.c  cg_storage_provider.c  cg_storage_provider_utils.c  cg_storage_request.c
src/libCloudGatewayStorageManagerClient/: CMakeLists.txt  cgsmc_async.c  cgsmc_async.c.orig  cgsmc_async_connection.c
src/scripts/: CMakeLists.txt  CloudGatewayAddFilesystem.sh  CloudGatewayAddFilterToInstance.sh  CloudGatewayAddInstance.sh  CloudGatewayAddMount.sh  CloudGatewayExpungeDelayedEntries.sh  CloudGatewayInodeGetCachePath.sh  CloudGatewayInodeInfos.sh  CloudGatewayListFilesystems.sh  CloudGatewayListInstances.sh  CloudGatewayMount.sh  CloudGatewayRemoveFilesystem.sh  CloudGatewayRemoveFilterFromInstance.sh  CloudGatewayRemoveInstance.sh  CloudGatewayRetrieveDelayedExpungeEntry.sh  CloudGatewayShowDelayedExpungeEntries.sh  CloudGatewayShowFilesystem.sh  CloudGatewayShowInstance.sh  CloudGatewayShowMount.sh  CloudGatewayStatus.sh  CloudGatewayStorageManager.sh  CloudGatewayStorageManagerConfigTest.sh  CloudGatewayUnmount.sh  CloudGatewayVolumeSize.sh  CloudGateway_env.sh.tmpl  CloudGateway_functions.sh  CloudGateway_variables.sh  create_db_user.sh  create_db_user_as_root.sh  create_pg_database.sql  create_tables.sh  env.sh
src/scripts/debian/: cloudgateway.service.tmpl  cloudgatewaymount@.service.tmpl  conffiles  conffiles-systemd  control  control-ubuntu-12-04  default  init.d  postinst
src/tests/: CMakeLists.txt  CloudGatewayConfiguration.xml.tmpl  cloudAmzTest.c  cloudDBtest.c  cloudOneProviderTest.c  cloudOpenstackTest.c  cloudProviderTest.c  cloudTEST.c  fonctionnal.sh  fonctionnal_failed_instances.sh
src/tests/configs/: CloudGatewayConfigurationPG.xml  CloudGatewayConfiguration_posix_compression.xml  CloudGatewayConfiguration_posix_compression_encryption.xml  CloudGatewayConfiguration_posix_encryption.xml  CloudGatewayConfiguration_posix_nofilters.xml  dummy.xml  storage_filter_compression_config.xml  storage_filter_encryption_config.xml
src/tests/include/: cloudTest.h
src/tools/: CMakeLists.txt  cg_check_pg_connstr.c  cg_config_add_compression_filter.itm  cg_config_add_encryption_filter.itm  cg_config_add_filter_to_instance.c  cg_config_add_filter_to_instance.itm  cg_config_add_fs.c  cg_config_add_instance.c  cg_config_add_mount.c  cg_config_create_amazon_instance.itm  cg_config_create_fs.itm  cg_config_create_instance.itm  cg_config_create_mount.itm  cg_config_create_openstack_instance.itm  cg_config_db_params.itm  cg_config_get.c  cg_config_list_fs.c  cg_config_list_fs.itm  cg_config_list_instances.c  cg_config_remove_filter_from_instance.c  cg_config_remove_filter_from_instance.itm  cg_config_remove_fs.c  cg_config_remove_fs.itm  cg_config_remove_instance.c  cg_config_remove_instance.itm  cg_config_set.c  cg_config_set_db.c  cg_config_show_fs.c  cg_config_show_fs.itm  cg_config_show_instance.c  cg_config_show_mount.c  cg_decrypt_file.c  cg_decrypt_file.itm  cg_expunge_delayed_entries.c  cg_expunge_delayed_entries.itm  cg_get_pg_version.c  cg_get_providers_stats.c  cg_get_providers_stats_json.c  cg_get_volume_rights.c  cg_retrieve_delayed_expunge_entry.c  (+15 more)
src/tools/include/: common.h  (+2 more)
(+84 files in other folders)
